@@ -1,3 +1,8 @@
+2007-08-16  Alan Modra  <amodra@bigpond.net.au>
+
+	* ld-srec/srec.exp: Always pass "-G 0".  Remove all powerpc
+	xfails.
+
 2007-08-14  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR ld/4918
